<resources>
    <string name="app_name">Cyberpad</string>
    <string name="tab_menu_status">Status</string>
    <string name="tab_menu_inventory">Inventory</string>
    <string name="tab_menu_skills">Skills</string>
    <string name="tab_menu_feed">Feed</string>
    <string name="under_construction">Coming Soon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_abilities"><![CDATA[< back to Abilities]]></string>
    <string name="language">Language</string>
    <string name="martial_arts">Martial Arts</string>
    <string name="name">Name</string>
    <string name="view_skills"><![CDATA[View Skills >]]></string>
    <string name="add">Add Ability</string>
    <string name="search">Search...</string>
    <string name="unable_read_date">Unable to read date</string>
</resources>
