<com.y2thez.cyberpad.thirdparty.SlidingRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.y2thez.cyberpad.fragments.ChildAbilitiesFragment">

    <Button
        android:id="@+id/switchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="@color/blue_medium"
        android:background="@drawable/button_bg"
        android:text="@string/view_skills"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchButton"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:background="@color/black_trans"/>
        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bar_shape"
            android:hint="@string/search"
            android:inputType="textFilter"
            android:maxLines="1"
            android:textColor="@color/green"
            android:textColorHint="@color/light_gray" />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/abilitiesRecyclerView"
        android:layout_below="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</com.y2thez.cyberpad.thirdparty.SlidingRelativeLayout>
